--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
+    "formik-dynamic-forms": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-datepicker": "^3.6.0",
     "react-dom": "^17.0.1",
+    "react-editext": "^3.17.2",
+    "react-modal": "^3.12.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
