--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "formik-dynamic-forms": "^1.0.2",
+    "lodash": "^4.17.21",
+    "lodash.clonedeep": "^4.5.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap-validation": "^0.1.11",
