--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.6.0",
     "formik": "^2.2.6",
     "formik-dynamic-forms": "^1.0.2",
+    "jest": "^26.6.0",
     "lodash": "^4.17.21",
     "lodash.clonedeep": "^4.5.0",
     "prop-types": "^15.7.2",
